src/test/deca/codegen/valid/child_override_method.deca
// Test la règle 2.6: la méthode déclarée porte un nom de méthode
// déjà attribué d'une classe super

class A  {
    void displayHello(){
        println("Hello it's A");
    }
}

class B extends A {
    void displayHello(){
        println("Hi it's B");
    }
}

{
    A a = new A();
    B b = new B();
    a.displayHello();
    b.displayHello();
}
// Resultat:
//# TODOTEST
